@@ -30,6 +30,8 @@ Not yet released.
 - :issue:`508`: flush the session before postprocessors, and commit after.
 - :issue:`536`: adds support for single-table inheritance.
 - :issue:`546`: adds support for joined table inheritance.
+- :issue:`559`: fixes bug that stripped attributes with JSON API reserved names
+  (like "type") when deserializing resources.
 
 Version 1.0.0b1
 ---------------
